dashlist: scroll fix when no header
The first item in the dashlist has a margin that messes up
the height calculation for the scroll bar when the Show headings
option is not selected. This fix adds a margin-top set to 0 for
the 1st item in the list in this case. This prevents a scrollbar
being shown incorrectly. Fixes #10772

--- a/public/sass/components/_panel_dashlist.scss
+++ b/public/sass/components/_panel_dashlist.scss
@@ -21,4 +21,8 @@
   .fa-star {
     color: $orange;
   }
+
+  &--no-margintop {
+    margin-top: 0;
+  }
 }
